# Apex-Fantasy-Football

./: .eslintrc.json  .gitignore  .prettierrc  ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  Dockerfile  Features.md  README.md  README_DEVELOPERS.md  config.py  docker-compose.yml  init.sql  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: Apex-Fantasy-Football-workflow.yml  ci.yml  django.yml  frontend-tests.yml
backend/: .env.example  Dockerfile  axiosConfig.js  manage.py  requirements.txt  wait-for-it.sh  wait_for_postgres.py
backend/apex_fantasy_football/: asgi.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
backend/fantasy/: __init__.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/users/: admin.py  models.py  views.py
docs/: README.md  competitor_analysis.md  project_overview.md  terms_of_service.md
docs/features/: README.md
docs/legal/: tos_draft.md
documentation/: legal_requirements.md  privacy_policy.md
documentation/legal/: privacy_policy_draft.md
frontend/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  LeagueCreationForm.js  LeagueList.js  TeamCreationForm.js  TeamManagementPage.js  (+4 more)
tests/: LeagueCreation.test.js  Registration.test.js  TeamRosterManagement.test.js  test_auth.py  test_helpers.py  test_league.py  test_protected_endpoint.py  test_team.py  tests.py
(+79 files in other folders)
