[tool.poetry]
name = "apex-fantasy-football"
version = "0.1.0"
description = "A state-of-the-art fantasy sports management platform designed for both casual and competitive fantasy football players."
authors = ["boomerbeatdown <gilmoredalton@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
